--- a/.github/workflows/build-openssl.yml
+++ b/.github/workflows/build-openssl.yml
@@ -1,6 +1,12 @@
 name: Build and Release OpenSSL
 
+# on:
+#   workflow_dispatch:
+
 on:
+  push:
+    branches:
+      - '**'
   workflow_dispatch:
 
 jobs:
