--- a/.github/workflows/build-openssl.yml
+++ b/.github/workflows/build-openssl.yml
@@ -50,17 +50,18 @@ jobs:
         run: |
           dir "C:\Program Files (x86)\"
           dir "C:\Program Files (x86)\Microsoft Visual Studio\"
-          dir "C:\Program Files (x86)\Microsoft Visual Studio\2022\BuildTools\VC\Auxiliary\Build\"
+          for /f "tokens=*" %%i in ('"C:\Program Files (x86)\Microsoft Visual Studio\Installer\vswhere.exe" -latest -products * -requires Microsoft.VisualStudio.Component.VC.Tools.x86.x64 -property installationPath') do set InstallDir=%%i
+          dir "%InstallDir%\VC\Auxiliary\Build\"
         shell: cmd
 
       - name: Build OpenSSL
         run: |
+          for /f "tokens=*" %%i in ('"C:\Program Files (x86)\Microsoft Visual Studio\Installer\vswhere.exe" -latest -products * -requires Microsoft.VisualStudio.Component.VC.Tools.x86.x64 -property installationPath') do set InstallDir=%%i
+          call "%InstallDir%\VC\Auxiliary\Build\vcvars64.bat"
           cd openssl
           perl Configure VC-WIN64A
-          call "C:\Program Files (x86)\Microsoft Visual Studio\2022\BuildTools\VC\Auxiliary\Build\vcvars64.bat"
           nmake
         shell: cmd
-
 
       - name: Archive built Windows artifacts
         run: |
