--- a/.github/workflows/build-openssl.yml
+++ b/.github/workflows/build-openssl.yml
@@ -20,12 +20,13 @@ jobs:
         id: get-version
         run: |
           version=$(git ls-remote --tags https://github.com/openssl/openssl.git \
-            | awk -F/ '{print $3}' \
-            | grep -E '^openssl-[0-9]+\\.[0-9]+\\.[0-9]+[a-z]?$' \
-            | sed 's/openssl-//' \
-            | sort -V \
-            | tail -1)
+          | awk -F/ '{print $3}' \
+          | grep -E '^openssl-[0-9]+\.[0-9]+\.[0-9]+[a-z]?$' \
+          | sed 's/openssl-//' \
+          | sort -V \
+          | tail -1)
 
+          echo "Detected the latest OpenSSL version is $version"
           echo "version=$version" >> $GITHUB_OUTPUT
 
       - name: Clone OpenSSL
