Add permission to run build script for ios

--- a/.github/workflows/build-openssl.yml
+++ b/.github/workflows/build-openssl.yml
@@ -39,43 +39,43 @@ jobs:
           name: openssl-source
           path: openssl/
 
-  build-windows:
-    name: Build OpenSSL for Windows
-    needs: prepare-source
-    runs-on: windows-2025
+  # build-windows:
+  #   name: Build OpenSSL for Windows
+  #   needs: prepare-source
+  #   runs-on: windows-2025
 
-    steps:
-      - name: Download OpenSSL source
-        uses: actions/download-artifact@v4
-        with:
-          name: openssl-source
-          path: openssl
+  #   steps:
+  #     - name: Download OpenSSL source
+  #       uses: actions/download-artifact@v4
+  #       with:
+  #         name: openssl-source
+  #         path: openssl
 
-      - uses: shogo82148/actions-setup-perl@v1
-        with:
-          perl-version: '5.38'
+  #     - uses: shogo82148/actions-setup-perl@v1
+  #       with:
+  #         perl-version: '5.38'
 
-      - uses: ilammy/setup-nasm@v1
+  #     - uses: ilammy/setup-nasm@v1
 
-      - name: Build OpenSSL
-        run: |
-          for /f "tokens=*" %%i in ('"C:\\Program Files (x86)\\Microsoft Visual Studio\\Installer\\vswhere.exe" -latest -products * -requires Microsoft.VisualStudio.Component.VC.Tools.x86.x64 -property installationPath') do set InstallDir=%%i
+  #     - name: Build OpenSSL
+  #       run: |
+  #         for /f "tokens=*" %%i in ('"C:\\Program Files (x86)\\Microsoft Visual Studio\\Installer\\vswhere.exe" -latest -products * -requires Microsoft.VisualStudio.Component.VC.Tools.x86.x64 -property installationPath') do set InstallDir=%%i
 
-          call "%InstallDir%\\VC\\Auxiliary\\Build\\vcvars64.bat"
-          cd openssl
-          perl Configure VC-WIN64A
-          nmake
-        shell: cmd
+  #         call "%InstallDir%\\VC\\Auxiliary\\Build\\vcvars64.bat"
+  #         cd openssl
+  #         perl Configure VC-WIN64A
+  #         nmake
+  #       shell: cmd
 
-      - name: Archive Windows build
-        run: |
-          Compress-Archive -Path openssl\* -DestinationPath openssl-windows-${{ needs.prepare-source.outputs.version }}.zip
+  #     - name: Archive Windows build
+  #       run: |
+  #         Compress-Archive -Path openssl\* -DestinationPath openssl-windows-${{ needs.prepare-source.outputs.version }}.zip
 
-      - name: Upload Windows artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: openssl-windows-${{ needs.prepare-source.outputs.version }}
-          path: openssl-windows-${{ needs.prepare-source.outputs.version }}.zip
+  #     - name: Upload Windows artifact
+  #       uses: actions/upload-artifact@v4
+  #       with:
+  #         name: openssl-windows-${{ needs.prepare-source.outputs.version }}
+  #         path: openssl-windows-${{ needs.prepare-source.outputs.version }}.zip
 
   build-ios:
     name: Build OpenSSL for iOS
@@ -96,6 +96,7 @@ jobs:
       - name: Build OpenSSL
         run: |
           cd openssl
+          chmod +x Configure
           ./Configure ios64-cross
           make
 
@@ -111,7 +112,8 @@ jobs:
 
   publish-release:
     name: Publish Release
-    needs: [build-windows, build-ios, prepare-source]
+    # needs: [build-windows, build-ios, prepare-source]
+    needs: [build-ios, prepare-source]
     runs-on: ubuntu-24.04
 
     steps:
@@ -141,7 +143,7 @@ jobs:
         with:
           tag_name: ${{ needs.prepare-source.outputs.version }}
           files: |
-            artifacts/openssl-windows-${{ needs.prepare-source.outputs.version }}/openssl-windows-${{ needs.prepare-source.outputs.version }}.zip
+            # artifacts/openssl-windows-${{ needs.prepare-source.outputs.version }}/openssl-windows-${{ needs.prepare-source.outputs.version }}.zip
             artifacts/openssl-ios-${{ needs.prepare-source.outputs.version }}/openssl-ios-${{ needs.prepare-source.outputs.version }}.zip
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
