Fix ios build. Add make flags

--- a/.github/workflows/build-openssl.yml
+++ b/.github/workflows/build-openssl.yml
@@ -98,7 +98,7 @@ jobs:
           cd openssl
           chmod +x Configure
           ./Configure ios64-cross
-          make
+           make CC="xcrun --sdk iphoneos clang" CFLAGS="-isysroot $(xcrun --sdk iphoneos --show-sdk-path)"
 
       - name: Archive iOS build
         run: |
