Add write permission

--- a/.github/workflows/build-openssl.yml
+++ b/.github/workflows/build-openssl.yml
@@ -9,6 +9,10 @@ on:
       - '**'
   workflow_dispatch:
 
+
+permissions:
+  contents: write  # Grants write access to the repository contents
+
 jobs:
   prepare-source:
     name: Clone OpenSSL Source
