--- a/.github/workflows/action-lint.yml
+++ b/.github/workflows/action-lint.yml
@@ -1,20 +1,21 @@
 name: Lint GitHub Actions
 on:
   push:
-    paths:
-      - ".github/workflows/*.yml"
+    paths: [".github/workflows/*.yml"]
   pull_request:
-    paths:
-      - ".github/workflows/*.yml"
+    paths: [".github/workflows/*.yml"]
 
 jobs:
-  actionlint:
+  lint-actions:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - name: Install actionlint
         run: |
-          sudo apt-get update
-          sudo apt-get install -y actionlint
+          curl -L -o actionlint.tar.gz https://github.com/rhysd/actionlint/releases/download/v1.6.25/actionlint_1.6.25_linux_amd64.tar.gz
+          tar xzf actionlint.tar.gz
+          sudo mv actionlint /usr/local/bin/
+          rm actionlint.tar.gz
       - name: Run actionlint
         run: actionlint
+        
