--- a/.github/workflows/action-lint.yml
+++ b/.github/workflows/action-lint.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   lint-actions:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
       - name: Install actionlint
@@ -18,4 +18,3 @@ jobs:
           rm actionlint.tar.gz
       - name: Run actionlint
         run: actionlint
-        
