--- a/.github/workflows/build-openssl.yml
+++ b/.github/workflows/build-openssl.yml
@@ -20,7 +20,9 @@ jobs:
           | sed 's/openssl-//' \
           | sort -V \
           | tail -1)
-
+          
+          #TODO: delete it
+          version="3.3.0"
           echo "Detected the latest OpenSSL version is $version"
           echo "version=$version" >> $GITHUB_OUTPUT
 
@@ -121,7 +123,7 @@ jobs:
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: ${{ needs.prepare-source.outputs.version }}
+          tag_name: openssl-${{ needs.prepare-source.outputs.version }}
           name: OpenSSL v${{ needs.prepare-source.outputs.version }}
           body: |
             This release contains OpenSSL built for:
