--- a/.github/workflows/action-lint.yml
+++ b/.github/workflows/action-lint.yml
@@ -7,12 +7,13 @@ on:
 
 jobs:
   lint-actions:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v4
       - name: Install actionlint
         run: |
-          curl -L -o actionlint.tar.gz https://github.com/rhysd/actionlint/releases/download/v1.6.25/actionlint_1.6.25_linux_amd64.tar.gz
+          # curl -L -o actionlint.tar.gz https://github.com/rhysd/actionlint/releases/download/v1.6.25/actionlint_1.6.25_linux_amd64.tar.gz
+          curl -L -o actionlint.tar.gz https://github.com/rhysd/actionlint/releases/download/v1.7.7/actionlint_1.7.7_linux_amd64.tar.gz
           tar xzf actionlint.tar.gz
           sudo mv actionlint /usr/local/bin/
           rm actionlint.tar.gz
