--- a/.github/workflows/build-openssl.yml
+++ b/.github/workflows/build-openssl.yml
@@ -7,20 +7,22 @@ on:
 jobs:
   prepare-source:
     name: Clone OpenSSL Source
-    runs-on: "ubuntu-24.04"
+    runs-on: ubuntu-24.04
     outputs:
       version: ${{ steps.get-version.outputs.version }}
     steps:
       - name: Get latest version from Git tags
         id: get-version
         run: |
-          version=$(git ls-remote --tags https://github.com/openssl/openssl.git \
-          | awk -F/ '{print $3}' \
-          | grep -E '^openssl-[0-9]+\.[0-9]+\.[0-9]+[a-z]?$' \
-          | sed 's/openssl-//' \
-          | sort -V \
-          | tail -1)
-
+          version=$(
+            git ls-remote --tags https://github.com/openssl/openssl.git |
+            awk -F/ '{print $3}' |
+            grep -E '^openssl-[0-9]+\.[0-9]+\.[0-9]+[a-z]?$' |
+            sed 's/openssl-//' |
+            sort -V |
+            tail -1
+          )
+          
           #TODO: delete it
           version="3.3.0"
           echo "Detected the latest OpenSSL version is $version"
