--- a/.github/workflows/build-openssl.yml
+++ b/.github/workflows/build-openssl.yml
@@ -41,7 +41,7 @@ jobs:
   build-windows:
     name: Build OpenSSL for Windows
     needs: prepare-source
-    runs-on: "windows-2025"
+    runs-on: windows-2025
     steps:
       - name: Download OpenSSL source
         uses: actions/download-artifact@v4
@@ -69,7 +69,6 @@ jobs:
             --openssldir="%InstallDir%\ssl" ^
             no-shared ^
             no-tests
-          
           nmake
           nmake install
 
