Fix ios x86 build

--- a/.github/workflows/build-openssl.yml
+++ b/.github/workflows/build-openssl.yml
@@ -84,8 +84,8 @@ jobs:
           name: openssl-windows-${{ needs.prepare-source.outputs.version }}
           path: openssl-windows-${{ needs.prepare-source.outputs.version }}.zip
 
-  build-ios:
-    name: Build OpenSSL for iOS
+  build-ios-arm64:
+    name: Build OpenSSL for iOS arm64
     needs: prepare-source
     runs-on: macos-14
     steps:
@@ -99,30 +99,6 @@ jobs:
         run: |
           brew install perl
       
-      # Build for iOS Simulator (x86_64)
-      - name: Build OpenSSL for iOS x86_64 iossimulator
-        run: |
-          INSTALL_DIR="$PWD/openssl-install"
-          cd openssl
-          chmod +x Configure
-          ./Configure iossimulator-x86_64-xcrun \
-            --prefix="$INSTALL_DIR" \
-            --openssldir="$INSTALL_DIR/ssl" \
-            no-shared \
-            no-tests \
-            no-legacy
-          
-          make CC="xcrun --sdk iphoneos clang" \
-            CFLAGS="-fembed-bitcode -isysroot $(xcrun --sdk iphoneos --show-sdk-path) -arch x86_64" \
-            CXXFLAGS="-fembed-bitcode -isysroot $(xcrun --sdk iphoneos --show-sdk-path) -arch x86_64"
-          
-          make install
-
-      - name: Archive iOS x86_64 build
-        run: |
-          cd openssl-install
-          zip -r ../openssl-ios-x86_64-${{ needs.prepare-source.outputs.version }}.zip .
-
       # Build for iOS Device (arm64)
       - name: Build OpenSSL for iOS arm64
         run: |
@@ -152,16 +128,56 @@ jobs:
         with:
           name: openssl-ios-arm64-${{ needs.prepare-source.outputs.version }}
           path: openssl-ios-arm64-${{ needs.prepare-source.outputs.version }}.zip
-  
+
+  build-ios-x86_64:
+    name: Build OpenSSL for iOS x86_64
+    needs: prepare-source
+    runs-on: macos-13
+    steps:
+      - name: Download OpenSSL source
+        uses: actions/download-artifact@v4
+        with:
+          name: openssl-source
+          path: openssl
+
+      - name: Install dependencies
+        run: |
+          brew install perl
+      
+      - name: Build OpenSSL for iOS x86_64 iossimulator
+        run: |
+          INSTALL_DIR="$PWD/openssl-install"
+          cd openssl
+          chmod +x Configure
+          ./Configure iossimulator-x86_64-xcrun \
+            --prefix="$INSTALL_DIR" \
+            --openssldir="$INSTALL_DIR/ssl" \
+            no-shared \
+            no-tests \
+            no-legacy
+          
+          make -j$(sysctl -n hw.ncpu) \
+            CC="xcrun --sdk iphonesimulator clang" \
+            CFLAGS="-arch x86_64 -mios-simulator-version-min=11.0" \
+            CXXFLAGS="-arch x86_64 -mios-simulator-version-min=11.0"
+          
+          make install
+
+      - name: Archive iOS x86_64 build
+        run: |
+          cd openssl-install
+          zip -r ../openssl-ios-x86_64-${{ needs.prepare-source.outputs.version }}.zip .
+
       - name: Upload x86_64 artifact
         uses: actions/upload-artifact@v4
         with:
           name: openssl-ios-x86_64-${{ needs.prepare-source.outputs.version }}
           path: openssl-ios-x86_64-${{ needs.prepare-source.outputs.version }}.zip
 
+          
   publish-release:
     name: Publish Release
-    needs: [build-windows, build-ios, prepare-source]
+    needs: [build-windows, build-ios-x86_64, build-ios-arm64, prepare-source]
     runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v4
