--- a/.github/workflows/build-openssl.yml
+++ b/.github/workflows/build-openssl.yml
@@ -2,7 +2,11 @@ name: Build and Release OpenSSL
 
 on:
   workflow_dispatch:
-
+    inputs:
+      version:
+        description: "Enter version of openssl to make a release"
+        required: true
+        default: "3.4.1"
 
 jobs:
   prepare-source:
@@ -14,17 +18,7 @@ jobs:
       - name: Get latest version from Git tags
         id: get-version
         run: |
-          version=$(
-            git ls-remote --tags https://github.com/openssl/openssl.git |
-            awk -F/ '{print $3}' |
-            grep -E '^openssl-[0-9]+\.[0-9]+\.[0-9]+[a-z]?$' |
-            sed 's/openssl-//' |
-            sort -V |
-            tail -1
-          )
-          
-          #TODO: delete it
-          version="3.4.1"
+          version=${{ github.event.inputs.version }}
           echo "Detected the latest OpenSSL version is $version"
           echo "version=$version" >> $GITHUB_OUTPUT
 
